Implement test to run payload mvn install command.
Check log message of maven builds and check maven is on the system
before running tests.

Add change to switch the command if we are not using windows.